--- a/src/pages/services/services.css
+++ b/src/pages/services/services.css
@@ -4,6 +4,9 @@
   padding: 6rem 1.5rem;
   font-family: 'Montserrat', sans-serif;
 }
+.services {
+  padding-top: calc(4.5rem - 60px); /* compensación automática */
+}
 
 /* ===== HEADER ===== */
 .services-header {
@@ -19,6 +22,8 @@
   color: #111;
   position: relative;
   display: inline-block;
+  margin-top: 0.1rem;   
+  margin-bottom: 0.3rem; 
 }
 
 .services-header p {
@@ -108,7 +113,6 @@
   line-height: 1.8;
   color: #e0e0e0;
   margin-top: 0.8rem;
-  text-align: justify;
   letter-spacing: 0.2px;
 }
 
